# fmm_gen_cost

./: .gitignore  .travis.yml  CLAUDE.md  CMakeLists.txt  README.md  REVIEW.md  solving_build_in_sandbox.md
.claude/skills/brainstorm/: SKILL.md
.claude/skills/scopestorm/: SKILL.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
brainstorms/: 260601-0504-event-level-gps-accuracy.md
python/: CMakeLists.txt
specs/000-pre-existing/: README.md
specs/000-pre-existing/contracts/: gps-trajectory.md  match-result-csv.md  (+4 more)
specs/001-polymatch-algorithm/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-real-network-validation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-polymatch-bugfixes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/algorithm/: geom_algorithm.cpp
src/app/: polymatch.cpp  polymatch_traces_gen.cpp  weightmatch.cpp
src/config/: access_point_config.cpp  access_point_config.hpp  network_config.cpp  network_config.hpp  polygon_config.cpp  polygon_config.hpp  priority_network_config.cpp  priority_network_config.hpp
src/io/: gps_reader.cpp  mm_writer.cpp  poly_mm_writer.cpp  poly_mm_writer.hpp
src/mm/: composite_graph.cpp  composite_graph.hpp  transition_graph.cpp
src/network/: access_point_layer.cpp  access_point_layer.hpp  graph.hpp  link_graph_routing.cpp  link_graph_routing.hpp  network.cpp  network.hpp  network_graph.cpp  poly_link_graph.cpp  poly_link_graph.hpp  polygon_layer.cpp  polygon_layer.hpp  routing_cache.hpp  trace_category.hpp  trace_generator.cpp  trace_generator.hpp  type.hpp
test/: CMakeLists.txt  README.md  fmm_test.cpp  generate_polymatch_test_data.py  generate_weightmatch_test_data.py  network_graph_test.cpp  network_test.cpp  polymatch_test.cpp  weightmatch_test.cpp
test/data/polymatch/: access_points.dbf  access_points.shp  access_points.shx  aps_contradictory.dbf  aps_contradictory.shp  aps_contradictory.shx  aps_off_boundary.dbf  aps_off_boundary.shp  aps_off_boundary.shx  aps_orphan.dbf  aps_orphan.shp  aps_orphan.shx  aps_shared.dbf  aps_shared.shp  aps_shared.shx  edges.dbf  edges.shp  edges.shx  perf_aps.dbf  perf_aps.shp  perf_aps.shx  perf_edges.dbf  perf_edges.shp  perf_edges.shx  perf_polygons.dbf  perf_polygons.shp  perf_polygons.shx  poly_writer_concurrent.csv  poly_writer_empty_ap.csv  poly_writer_linkonly.csv  poly_writer_out.csv  poly_writer_through.csv  polygons.dbf  polygons.shp  polygons.shx  polygons_all_invalid.dbf  polygons_all_invalid.shp  polygons_dup.dbf  polygons_dup.shp  polygons_dup.shx  (+5 more)
test/data/polymatch/real_example_area/: _t007.csv  _t009.csv  _t010.csv  access_points.dbf  access_points.shp  access_points.shx  network.dbf  network.shp  network.shx  polygons.dbf  polygons.shp  polygons.shx
test/data/weightmatch/: expected_basic.csv  expected_edge_cases.csv  trips_basic.csv  trips_edge_cases.csv
test/data/weightmatch/sa4_17/: expected_basic_tb.csv  expected_edge_cases.csv  expected_stress.csv  links.shx  trips_basic.csv  trips_edge_cases.csv  trips_stress.csv  turn_bans.csv
test/data/weightmatch/sa4_212/: expected_basic.csv  expected_basic_tb.csv  expected_edge_cases.csv  expected_stress.csv  links.dbf  links.shp  links.shx  trips_basic.csv  trips_edge_cases.csv  trips_stress.csv  turn_bans.csv
(+39 files in other folders)
